force-app/main/default/objects/Donor__e/Donor__e.object-meta.xml
<CustomObject>
    <description>Generic event type for a Donor; initial will be Screening Complete and Donation Complete.</description>
    <label>Donor Event</label>
    <pluralLabel>Donor Event</pluralLabel>
</CustomObject>