force-app/main/default/objects/Donor__e/fields/collection_number__c.field-meta.xml
<CustomField>
    <fullName>collection_number__c</fullName>
    <label>collection_number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>