force-app/main/default/objects/Donor__e/fields/donor_number__c.field-meta.xml
<CustomField>
    <fullName>donor_number__c</fullName>
    <description>BECS/NexLynk Donor unique identifier (primary key)</description>
    <label>donor_number</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
</CustomField>