force-app/main/default/objects/Donor__e/fields/Event_Msg__c.field-meta.xml
<CustomField>
    <fullName>Event_Msg__c</fullName>
    <description>The message payload for the event</description>
    <label>Event Msg</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>