force-app/main/default/objects/Donor__e/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>The one time enrollment ID for a new donor</description>
    <label>Event Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>