force-app/main/default/objects/Donor__e/fields/exception_msg__c.field-meta.xml
<CustomField>
    <fullName>exception_msg__c</fullName>
    <description>A message of some detail around the context of the exception.</description>
    <label>exception_msg</label>
    <length>50</length>
    <type>Text</type>
</CustomField>