force-app/main/default/objects/Donor__e/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <description>Give the outcome of the event e.g. &apos;exception&apos; or &apos;complete&apos;</description>
    <label>status</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>