force-app/main/default/objects/Donor__e/fields/timestamp__c.field-meta.xml
<CustomField>
    <fullName>timestamp__c</fullName>
    <description>ISO datetime of the event, which may be different from the run time, of course!</description>
    <label>timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>