force-app/main/default/objects/Donor__e/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <description>The event type e.g. &apos;Check In&apos;, &apos;Donation end&apos; etc.</description>
    <label>type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>